--- a/rpc/pom.xml
+++ b/rpc/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.2.6</version>
+		<version>3.2.7</version>
 	</parent>
 	<artifactId>rpc</artifactId>
 
@@ -14,5 +14,15 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.weicoder.extend</groupId>
+			<artifactId>rpc-extend</artifactId>
+		</dependency>
+		<!-- 
+		<dependency> 
+			<groupId>com.alipay.sofa</groupId> 
+			<artifactId>sofa-rpc-all</artifactId> 
+		</dependency> 
+		-->
 	</dependencies>
 </project>
