--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.2.6</version>
+		<version>3.2.7</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>dao</artifactId>
@@ -14,23 +14,29 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.weicoder.extend</groupId>
-			<artifactId>dao-extend</artifactId>
+		 
+		<dependency> 
+			<groupId>com.weicoder.extend</groupId> 
+			<artifactId>dao-extend</artifactId> 
 		</dependency>
-		<!-- 
+		 
+		<!--
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId> 
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-hikaricp</artifactId> 
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId> 
-		</dependency>
-		 -->
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency> 
+		-->
 	</dependencies>
 </project>
