--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.2.8</version>
+		<version>3.2.7.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>core</artifactId>
@@ -14,19 +14,19 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
 		</dependency>
-		
+		<!--
 		<dependency>
 			<groupId>com.weicoder.extend</groupId>
 			<artifactId>core-extend</artifactId>
 		</dependency>
-		 <!-- 
+		  -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.weicoder</groupId>
-			<artifactId>disruptor-jdk11</artifactId>
+			<groupId>com.lmax</groupId>
+  			<artifactId>disruptor</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -36,6 +36,6 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
-		-->
+		
 	</dependencies>
 </project>
