--- a/email/pom.xml
+++ b/email/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.2.8</version> 
+		<version>3.2.7.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>email</artifactId>
@@ -13,10 +13,20 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
-		</dependency>  
+		</dependency>
+		<!-- 
+		<dependency> 
+			<groupId>com.weicoder.extend</groupId> 
+			<artifactId>email-extend</artifactId> 
+		</dependency>
+		 -->
 		<dependency>
-			<groupId>com.weicoder.extend</groupId>
-			<artifactId>email-extend</artifactId>
-		</dependency>  
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId> 
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId> 
+		</dependency>
 	</dependencies>
 </project>
