--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.2.8</version> 
+		<version>3.2.7.1</version> 
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>xml</artifactId>
@@ -14,9 +14,23 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
 		</dependency>  
+		<!-- 
 		<dependency>
 			<groupId>com.weicoder.extend</groupId>
 			<artifactId>xml-extend</artifactId>
+		</dependency>
+		 -->
+		<dependency> 
+		 	<groupId>org.dom4j</groupId>
+		  	<artifactId>dom4j</artifactId> 
+		</dependency>
+		<dependency>
+		  	<groupId>org.jdom</groupId>
+		  	<artifactId>jdom</artifactId> 
+		</dependency>
+		<dependency>
+		  	<groupId>com.thoughtworks.xstream</groupId>
+		  	<artifactId>xstream</artifactId>
 		</dependency>
 	</dependencies>
 </project>
