--- a/rpc/pom.xml
+++ b/rpc/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.2.8</version>
+		<version>3.2.9</version>
 	</parent>
 	<artifactId>rpc</artifactId>
 
@@ -18,11 +18,13 @@
 		<dependency>
 			<groupId>com.weicoder.extend</groupId>
 			<artifactId>rpc-extend</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<!--
 		<dependency> 
 			<groupId>com.alipay.sofa</groupId> 
 			<artifactId>sofa-rpc-all</artifactId> 
+			<scope>provided</scope>
 		</dependency> 
 		 -->
 	</dependencies>
