--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -16,18 +16,22 @@
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
+			<artifactId>log</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
 			<artifactId>protobuf</artifactId>
 		</dependency>
-		 
+		 <!--
 		<dependency>
 			<groupId>com.weicoder.extend</groupId>
 			<artifactId>kafka-extend</artifactId>
 		</dependency>
-		 <!--
+		 -->
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId> 
 		</dependency>
-		-->
+		
 	</dependencies>
 </project>
