--- a/memcache/pom.xml
+++ b/memcache/pom.xml
@@ -12,18 +12,18 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>common</artifactId>
 		</dependency> 
-		
+		<!--
 		<dependency>
 			<groupId>com.weicoder.extend</groupId>
 			<artifactId>memcache-extend</artifactId>
 		</dependency> 
-		<!-- 
+		 -->
 		<dependency>
 		 	<groupId>com.whalin</groupId>
 		 	<artifactId>Memcached-Java-Client</artifactId> 
 		</dependency>
-		 -->
+		 
 	</dependencies>
 </project>
