--- a/socket/pom.xml
+++ b/socket/pom.xml
@@ -12,22 +12,26 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>log</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>protobuf</artifactId>
 		</dependency>
-		
+		<!--
 		<dependency>
 			<groupId>com.weicoder.extend</groupId>
 			<artifactId>socket-extend</artifactId>
 		</dependency>
-		<!--
+		-->
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId> 
 		</dependency>
-		  -->
+		  
 	</dependencies>
 </project>
