--- a/test/pom.xml
+++ b/test/pom.xml
@@ -12,7 +12,11 @@
 	<dependencies>  
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>cache</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
